syntax = "proto3";
package Protocol;

option csharp_namespace = "Google.Protobuf.Protocol";

enum PlayerType
{
	PLAYER_TYPE_NONE = 0;
	PLAYER_TYPE_KNIGHT = 1;
	PLAYER_TYPE_MAGE = 2;
	PLAYER_TYPE_ARCHER = 3;
}

enum CreatureState
{
	Idle = 0;
	Moving = 1;
    Skill = 2;
    Dead = 3;
}
enum MoveDir
{
    None = 0;
    Up = 1;
    Down = 2;
    Left = 3;
    Right = 4;
}