syntax = "proto3";
package Protocol;

option csharp_namespace = "Google.Protobuf.Protocol";

import "Enum.proto";


message ObjectInfo
{
	int32 objectId = 1;
	string name = 2;
	PositionInfo posInfo = 3;
	StatInfo statInfo = 4;
}

message PositionInfo
{
	CreatureState state = 1;
	MoveDir moveDir = 2;
	int32 posX = 3;
	int32 posY = 4;
}

message SkillInfo
{
	int32 skillId = 1;
}

message StatInfo
{
	int32 hp = 1;
	int32 maxHp = 2;
	float speed = 3;
}